modificamos html para usar flex

--- a/index.html
+++ b/index.html
@@ -6,19 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="node_modules/bootstrap/dist/css/bootstrap-grid.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="node_modules/bootstrap/dist/css/bootstrap-grid.min.css" rel="stylesheet">
 
-    <title>Hello, world!</title>
+    <title>Guia Hoteles</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
 
-    <!-- Optional JavaScript; choose one of the two! -->
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <div class="jumbotron">
+      <h1>Hoteles</h1>
+    </div>
+
+    <div class="container">
+      <div class="d-flez">
+        <div class="col-5m-4">
+          <p>
+            <h3>"Como funciona?"</h3>
+            <p>Busca los hoteles de acuerdo a tu preferencia.</p>
+          </p>
+        </div>
+      </div>
+      <div class="col-5m-4">
+        <p>
+          <h3>"Donde puedo reservar?"</h3>
+          <p>Elegia la ciudad que te interese y luegorealiza la reserva con tus datos.</p>
+        </p>
+      </div>
+    </div>
+
+    <!-- *******************************NODE******************************** -->
+    <!-- Optional JavaScript -->
+    <!-- Jquery JS-->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!-- Popper JS-->
     <script src="node_modules/popper.js/dist/popper.min.js"></script>
-    <!-- Bootstrap -->
+    <!-- Bootstrap JS -->
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
