--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!-- Bootstrap CSS -->
     <link href="node_modules/bootstrap/dist/css/bootstrap-grid.min.css" rel="stylesheet">
 
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/main.css">
     <title>Guia Hoteles</title>
   </head>
   <body>
@@ -17,6 +19,7 @@
     </div>
 
     <div class="container">
+
       <div class="d-flez">
         <div class="col-5m-4">
           <p>
@@ -25,14 +28,82 @@
           </p>
         </div>
       </div>
+
       <div class="col-5m-4">
         <p>
           <h3>"Donde puedo reservar?"</h3>
           <p>Elegia la ciudad que te interese y luegorealiza la reserva con tus datos.</p>
         </p>
       </div>
+
+      <div class="col-sm-5">
+        <p>
+          <h3>Como pago?</h3>
+          <p>Utiliza tu targeta favorita</p>
+        </p>
+      </div>
     </div>
 
+    <hr>
+
+    <div class="d-flex flex-wrap flex-row-reverse">
+      <div class="col-sm-3">
+        <h4>Hotel Barcelon</h4>
+        <p>Hotel ubicacion en pleno centro de Barcelona a pocos metros de la playa12345</p>
+        <button class="btn btn-primary">Reservar</button>
+      </div>
+
+      <div class="col-sm-3">
+        <h4>Hotel Buenos Aires</h4>
+        <p>Hotel ubicacion en pleno centro.</p>
+        <button class="btn btn-primary">Reserva</button>
+      </div>
+      
+      <div class="col-sm-3">
+        <h4>Hotel Lima</h4>
+        <p>Hotel ubicacion en pleno centro.</p>
+        <button class="btn">Reserva</button>
+      </div>
+
+      <div class="col-sm-3">
+        <h4>Hotel Rio de Janeiro</h4>
+        <p>Hotel ubicacion en pleno centro.</p>
+        <button class="btn">Reserva</button>
+      </div>
+
+      <div class="col-sm-3">
+        <h4>Hotel la Paz</h4>
+        <p>Hotel ubicacion en pleno centro.</p>
+        <button class="btn btn-primary">Reserva</button>
+      </div>
+
+      <div class="col-sm-3">
+        <h4>Hotel Madrid</h4>
+        <p>Madrid en plano entro.</p>
+        <button class="btn btn-primary">Reserva</button>
+      </div>
+
+      <div class="col-sm-3">
+        <h4>Hotel San Pablo</h4>
+        <p>Hotel ubicacion en pleno centro.</p>
+        <button class="btn btn-primary">Reserva</button>
+      </div>
+    </div>
+    
+    <footer>
+      <div class="col-sm-4">
+        <a href="http://www.facebook.com">Facebook</a>
+        <a href="http://www.twitter.com">Twitter</a>
+        <a href="http://www.instagram.com">Instagram</a>
+      </div>
+      <div class="col-sm-4">
+        <address>
+          Tucman B34, CABA, Argentina
+          +41 244354 456456 456
+          contacto@gmail.com
+        </address>
+      </div>
+    </footer>
     <!-- *******************************NODE******************************** -->
     <!-- Optional JavaScript -->
     <!-- Jquery JS-->
