content the index.html and main.css

--- a/index.html
+++ b/index.html
@@ -1,116 +1,100 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="node_modules/bootstrap/dist/css/bootstrap-grid.min.css" rel="stylesheet">
+        <!-- Bootstrap CSS -->
+        <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/main.css">
-    <title>Guia Hoteles</title>
-  </head>
-  <body>
+        <title>Guia Hoteles</title>
 
-    <div class="jumbotron">
-      <h1>Hoteles</h1>
-    </div>
+        <!-- CSS -->
+        <link rel="stylesheet" href="css/main.css">
+    </head>
+    <body>
 
-    <div class="container">
-
-      <div class="d-flez">
-        <div class="col-5m-4">
-          <p>
-            <h3>"Como funciona?"</h3>
-            <p>Busca los hoteles de acuerdo a tu preferencia.</p>
-          </p>
+        <div class="mt-4 p-5 bg-primary text-white rounded">
+            <h1>Hoteles</h1>
         </div>
-      </div>
+        <div class="container">
+            <div class="d-flex">
+                <div class="col-sm-4">
+                    <p>
+                        <h3>Como funciona?</h3>
+                        <p>Busca los hoteles de acuerdo a tu preferencia.</p>
+                    </p>
+                </div>
 
-      <div class="col-5m-4">
-        <p>
-          <h3>"Donde puedo reservar?"</h3>
-          <p>Elegia la ciudad que te interese y luegorealiza la reserva con tus datos.</p>
-        </p>
-      </div>
+                <div class="col-sm-4">
+                    <p>
+                        <h3>Donde puedo reservar?</h3>
+                        <p>Elegia la ciudad que te interese y luego realiza la reserva con tus datos.</p>
+                    </p>
+                </div>
 
-      <div class="col-sm-5">
-        <p>
-          <h3>Como pago?</h3>
-          <p>Utiliza tu targeta favorita</p>
-        </p>
-      </div>
-    </div>
+                <div class="col-sm-4">
+                    <p>
+                        <h3>Como pago?</h3>
+                        <p>Utiliza tu tarjeta favorita.</p>
+                    </p>
+                </div>
+            </div>
 
-    <hr>
-
-    <div class="d-flex flex-wrap flex-row-reverse">
-      <div class="col-sm-3">
-        <h4>Hotel Barcelon</h4>
-        <p>Hotel ubicacion en pleno centro de Barcelona a pocos metros de la playa12345</p>
-        <button class="btn btn-primary">Reservar</button>
-      </div>
-
-      <div class="col-sm-3">
-        <h4>Hotel Buenos Aires</h4>
-        <p>Hotel ubicacion en pleno centro.</p>
-        <button class="btn btn-primary">Reserva</button>
-      </div>
-      
-      <div class="col-sm-3">
-        <h4>Hotel Lima</h4>
-        <p>Hotel ubicacion en pleno centro.</p>
-        <button class="btn">Reserva</button>
-      </div>
-
-      <div class="col-sm-3">
-        <h4>Hotel Rio de Janeiro</h4>
-        <p>Hotel ubicacion en pleno centro.</p>
-        <button class="btn">Reserva</button>
-      </div>
-
-      <div class="col-sm-3">
-        <h4>Hotel la Paz</h4>
-        <p>Hotel ubicacion en pleno centro.</p>
-        <button class="btn btn-primary">Reserva</button>
-      </div>
-
-      <div class="col-sm-3">
-        <h4>Hotel Madrid</h4>
-        <p>Madrid en plano entro.</p>
-        <button class="btn btn-primary">Reserva</button>
-      </div>
-
-      <div class="col-sm-3">
-        <h4>Hotel San Pablo</h4>
-        <p>Hotel ubicacion en pleno centro.</p>
-        <button class="btn btn-primary">Reserva</button>
-      </div>
-    </div>
-    
-    <footer>
-      <div class="col-sm-4">
-        <a href="http://www.facebook.com">Facebook</a>
-        <a href="http://www.twitter.com">Twitter</a>
-        <a href="http://www.instagram.com">Instagram</a>
-      </div>
-      <div class="col-sm-4">
-        <address>
-          Tucman B34, CABA, Argentina
-          +41 244354 456456 456
-          contacto@gmail.com
-        </address>
-      </div>
-    </footer>
-    <!-- *******************************NODE******************************** -->
-    <!-- Optional JavaScript -->
-    <!-- Jquery JS-->
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <!-- Popper JS-->
-    <script src="node_modules/popper.js/dist/popper.min.js"></script>
-    <!-- Bootstrap JS -->
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-  </body>
+            <hr>
+            <!-- =========HOTELES========== -->
+            <div class="d-flex flex-wrap flex-row-reverse">
+                <div class="col-sm-3">
+                    <h4>Hotel Barcelona</h4>
+                    <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa.</p>
+                    <button class="btn btn-primary">Reservar</button>
+                </div>
+                <div class="col-sm-3">
+                    <h4>Hotel Buenos Aires</h4>
+                    <p>Hotel ubicado en pleno centro.</p>
+                    <button class="btn btn-primary">Reservar</button>
+                </div>
+                <div class="col-sm-3">
+                    <h4>Hotel Lima</h4>
+                    <p>Hotel ubicado entre llamas.</p>
+                    <button class="btn btn-primary">Reservar</button>
+                </div>
+                <div class="col-sm-3">
+                    <h4>Hotel Rio de Janeiro</h4>
+                    <p>Hotel ubicado con monos de toda las clases.</p>
+                    <button class="btn btn-primary">Reservar</button>
+                </div>
+                <div class="col-sm-3">
+                    <h4>Hotel La Paz</h4>
+                    <p>Hotel ubicado en pleno centro de la plaza bolivia.</p>
+                    <button class="btn btn-primary">Reservar</button>
+                </div>
+                <div class="col-sm-3">
+                    <h4>Hotel Madrid</h4>
+                    <p>Hotel ubicado en pleno centro de los de mi pinga.</p>
+                    <button class="btn btn-primary">Reservar</button>
+                </div>
+                <div class="col-sm-3">
+                    <h4>Hotel San Pablo</h4>
+                    <p>Hotel ubicado en la ciudad de santabarabara.</p>
+                    <button class="btn btn-primary">Reservar</button>
+                </div>
+                <div class="col-sm-3">
+                    <h4>Hotel EEUU</h4>
+                    <p>Hotel ubicado entre los negros de estados unidos.</p>
+                    <button class="btn btn-primary">Reservar</button>
+                </div>
+            </div>
+        </div>  
+<!-- minuto 8:00 -->
+        <!-- *************************NODE_PACKAGE******************************** -->
+        <!-- Optional JavaScript -->
+        <!-- Jquery JS-->
+        <script src="node_modules/jquery/dist/jquery.min.js"></script>
+        <!-- Popper JS-->
+        <script src="node_modules/popper.js/dist/popper.min.js"></script>
+        <!-- Bootstrap JS -->
+        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    </body>
 </html>
