--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="col-sm-3">
                     <h4>Hotel Buenos Aires</h4>
-                    <p>Hotel ubicado en pleno centro.</p>
+                    <p>Hotel ubicado en pleno fineas y fer centro.</p>
                     <button class="btn btn-primary">Reservar</button>
                 </div>
                 <div class="col-sm-3">
@@ -77,7 +77,7 @@
                 </div>
                 <div class="col-sm-3">
                     <h4>Hotel San Pablo</h4>
-                    <p>Hotel ubicado en la ciudad de santabarabara.</p>
+                    <p>Hotel ubicado en la ciudad de cusco.</p>
                     <button class="btn btn-primary">Reservar</button>
                 </div>
                 <div class="col-sm-3">
