added footer and style in html and css

--- a/index.html
+++ b/index.html
@@ -45,49 +45,108 @@
             <hr>
             <!-- =========HOTELES========== -->
             <div class="d-flex flex-wrap flex-row-reverse">
-                <div class="col-sm-3">
-                    <h4>Hotel Barcelona</h4>
-                    <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa.</p>
-                    <button class="btn btn-primary">Reservar</button>
+                <div class="col-sm-3 card-hotel d-flex flex-column justify-content-between">
+                    <div>
+                        <h4>Hotel Barcelona</h4>
+                        <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa.</p>
+                    </div>
+                    <div>
+                        <button class="btn btn-primary btn-reserva">Reservar</button>
+                    </div>
                 </div>
-                <div class="col-sm-3">
-                    <h4>Hotel Buenos Aires</h4>
-                    <p>Hotel ubicado en pleno fineas y fer centro.</p>
-                    <button class="btn btn-primary">Reservar</button>
+                <div class="col-sm-3 card-hotel d-flex flex-column justify-content-between">
+                    <div>
+                        <h4>Hotel Buenos Aires</h4>
+                        <p>Hotel ubicado en pleno fineas y fer centro.</p>
+                    </div>
+                    <div>
+                        <button class="btn btn-primary btn-reserva">Reservar</button>
+                    </div>
                 </div>
-                <div class="col-sm-3">
-                    <h4>Hotel Lima</h4>
-                    <p>Hotel ubicado entre llamas.</p>
-                    <button class="btn btn-primary">Reservar</button>
+                <div class="col-sm-3 card-hotel d-flex flex-column justify-content-between">
+                    <div>
+                        <h4>Hotel Lima</h4>
+                        <p>Hotel ubicado entre llamas.</p>
+                    </div>
+                    <div>
+                        <button class="btn btn-primary btn-reserva ">Reservar</button>
+                    </div>
                 </div>
-                <div class="col-sm-3">
-                    <h4>Hotel Rio de Janeiro</h4>
-                    <p>Hotel ubicado con monos de toda las clases.</p>
-                    <button class="btn btn-primary">Reservar</button>
+                <div class="col-sm-3 card-hotel d-flex flex-column justify-content-between">
+                    <div>
+                        <h4>Hotel Rio de Janeiro</h4>
+                        <p>Hotel ubicado con monos de toda las clases.</p>
+                    </div>
+                    <div>
+                        <button class="btn btn-primary btn-reserva">Reservar</button>
+                    </div>
                 </div>
-                <div class="col-sm-3">
-                    <h4>Hotel La Paz</h4>
-                    <p>Hotel ubicado en pleno centro de la plaza bolivia.</p>
-                    <button class="btn btn-primary">Reservar</button>
+                <div class="col-sm-3 card-hotel d-flex flex-column justify-content-between">
+                    <div>
+                        <h4>Hotel La Paz</h4>
+                        <p>Hotel ubicado en pleno centro de la plaza bolivia.</p>
+                    </div>
+                    <div>
+                        <button class="btn btn-primary btn-reserva">Reservar</button>
+                    </div>
                 </div>
-                <div class="col-sm-3">
-                    <h4>Hotel Madrid</h4>
-                    <p>Hotel ubicado en pleno centro de los de mi pinga.</p>
-                    <button class="btn btn-primary">Reservar</button>
+                <div class="col-sm-3 card-hotel d-flex flex-column justify-content-between">
+                    <div>
+                        <h4>Hotel Madrid</h4>
+                        <p>Hotel ubicado en pleno centro de los de mi pinga.</p>
+                    </div>
+                    <div>
+                        <button class="btn btn-primary btn-reserva">Reservar</button>
+                    </div>
                 </div>
-                <div class="col-sm-3">
-                    <h4>Hotel San Pablo</h4>
-                    <p>Hotel ubicado en la ciudad de cusco.</p>
-                    <button class="btn btn-primary">Reservar</button>
+                <div class="col-sm-3 card-hotel d-flex flex-column justify-content-between">
+                    <div>
+                        <h4>Hotel San Pablo</h4>
+                        <p>Hotel ubicado en la ciudad de cusco.</p>
+                    </div>
+                    <div>
+                        <button class="btn btn-primary btn-reserva">Reservar</button>
+                    </div>
                 </div>
-                <div class="col-sm-3">
-                    <h4>Hotel EEUU</h4>
-                    <p>Hotel ubicado entre los negros de estados unidos.</p>
-                    <button class="btn btn-primary">Reservar</button>
+                <div class="col-sm-3 card-hotel d-flex flex-column justify-content-between">
+                    <div>
+                        <h4>Hotel EEUU</h4>
+                        <p>Hotel ubicado entre los negros de estados unidos.</p>
+                    </div>
+                    <div>
+                        <button class="btn btn-primary btn-reserva">Reservar</button>
+                    </div>
+                </div>
+
+            </div>
+        </div> 
+
+        <footer>
+            <div class="row">
+                <div class="col-sm-4 d-flex flex-column">
+                    <a href="https://www.facebook.com">Facebook</a>
+                    <a href="https://www.Instagram.com">Instagram</a>
+                    <a href="https://www.Twitter.com">Twitter</a>
+                    <a href="https://www.googleplus.com">Google +</a>
+                </div>
+    
+                <div class="col-sm-4">
+                    <address>
+                        <h3>Oficina central</h3>
+                        <p>Tucuman 834, CABA, Argentina</p>
+                        <p>51 234 234 234</p>
+                        <p>Contacto@guiahoteles.com</p>
+                    </address>
+                </div>
+    
+                <div class="col-sm-4 d-flex flex-column align-items-end">
+                    <a href="https://www.nosotros-guiahoteles.com">Nosotros</a>
+                    <a href="https://www.precios-guiahoteles.com">Precios</a>
+                    <a href="https://www.terminos-guiahoteles.com">Terminos y Condiciones</a>
+                    <a href="https://www.contacto-guiahoteles.com">Contactos</a>
                 </div>
             </div>
-        </div>  
-<!-- minuto 8:00 -->
+        </footer>
         <!-- *************************NODE_PACKAGE******************************** -->
         <!-- Optional JavaScript -->
         <!-- Jquery JS-->
