use open-icons [npm install open-iconic]

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
         <!-- CSS -->
         <link rel="stylesheet" href="css/main.css">
+        <!-- OPEN-ICONIC -->
+        <link rel="stylesheet" href="node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css">
 
         <title>Guia Hoteles</title>
 
@@ -78,7 +80,8 @@
                         <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa.</p>
                     </div>
                     <div>
-                        <button class="btn btn-primary btn-reserva">Reservar</button>
+                        <button class="btn btn-primary btn-reserva">
+                            <span class="oi oi-plus"></span> Reservar</button>
                     </div>
                 </div>
                 <div class="col-sm-3 card-hotel d-flex flex-column justify-content-between">
@@ -87,7 +90,7 @@
                         <p>Hotel ubicado en pleno fineas y fer centro.</p>
                     </div>
                     <div>
-                        <button class="btn btn-primary btn-reserva">Reservar</button>
+                        <button class="btn btn-primary btn-reserva"><span class="oi oi-plus"></span> Reservar</button>
                     </div>
                 </div>
                 <div class="col-sm-3 card-hotel d-flex flex-column justify-content-between">
@@ -96,7 +99,7 @@
                         <p>Hotel ubicado entre llamas.</p>
                     </div>
                     <div>
-                        <button class="btn btn-primary btn-reserva ">Reservar</button>
+                        <button class="btn btn-primary btn-reserva "><span class="oi oi-plus"></span> Reservar</button>
                     </div>
                 </div>
                 <div class="col-sm-3 card-hotel d-flex flex-column justify-content-between">
@@ -105,7 +108,7 @@
                         <p>Hotel ubicado con monos de toda las clases.</p>
                     </div>
                     <div>
-                        <button class="btn btn-primary btn-reserva">Reservar</button>
+                        <button class="btn btn-primary btn-reserva"><span class="oi oi-plus"></span> Reservar</button>
                     </div>
                 </div>
                 <div class="col-sm-3 card-hotel d-flex flex-column justify-content-between">
@@ -114,7 +117,7 @@
                         <p>Hotel ubicado en pleno centro de la plaza bolivia.</p>
                     </div>
                     <div>
-                        <button class="btn btn-primary btn-reserva">Reservar</button>
+                        <button class="btn btn-primary btn-reserva"><span class="oi oi-plus"></span> Reservar</button>
                     </div>
                 </div>
                 <div class="col-sm-3 card-hotel d-flex flex-column justify-content-between">
@@ -123,7 +126,7 @@
                         <p>Hotel ubicado en pleno centro de los de mi pinga.</p>
                     </div>
                     <div>
-                        <button class="btn btn-primary btn-reserva">Reservar</button>
+                        <button class="btn btn-primary btn-reserva"><span class="oi oi-plus"></span> Reservar</button>
                     </div>
                 </div>
                 <div class="col-sm-3 card-hotel d-flex flex-column justify-content-between">
@@ -132,7 +135,7 @@
                         <p>Hotel ubicado en la ciudad de cusco.</p>
                     </div>
                     <div>
-                        <button class="btn btn-primary btn-reserva">Reservar</button>
+                        <button class="btn btn-primary btn-reserva"><span class="oi oi-plus"></span> Reservar</button>
                     </div>
                 </div>
                 <div class="col-sm-3 card-hotel d-flex flex-column justify-content-between">
@@ -141,7 +144,7 @@
                         <p>Hotel ubicado entre los negros de estados unidos.</p>
                     </div>
                     <div>
-                        <button class="btn btn-primary btn-reserva">Reservar</button>
+                        <button class="btn btn-primary btn-reserva"><span class="oi oi-plus"></span> Reservar</button>
                     </div>
                 </div>
 
@@ -160,9 +163,9 @@
                 <div class="col-sm-4">
                     <address>
                         <h3>Oficina central</h3>
-                        <p>Tucuman 834, CABA, Argentina</p>
-                        <p>51 234 234 234</p>
-                        <p>Contacto@guiahoteles.com</p>
+                        <p><span class="oi oi-home footer-address-icon"></span>Tucuman 834, CABA, Argentina</p>
+                        <p><span class="oi oi-phone footer-address-icon"></span>+51 234 234 234</p>
+                        <p><span class="oi oi-inbox footer-address-icon"></span>Contacto@guiahoteles.com</p>
                     </address>
                 </div>
     
