create the file contactos.html and made a form

--- a/contacto.html
+++ b/contacto.html
@@ -24,29 +24,80 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
-                    <li class="nav-item active"><a href="about.html" class="nav-link">Nosotros</a></li>
+                    <li class="nav-item"><a href="about.html" class="nav-link">Nosotros</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Precios</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Terminos y Condiciones</a></li>
-                    <li class="nav-item"><a href="contacto.html" class="nav-link">Contacto</a></li>
+                    <li class="nav-item active"><a href="contacto.html" class="nav-link">Contacto</a></li>
                 </ul>
             </div>
         </nav>
 
         <div class="jumbotron mt-4 p-5 bg-primary text-white rounded">
-            <h1>Nosotros</h1>
+            <h1>Contactos</h1>
         </div>
         <div class="container">
 
+            <!-- BREADCRUMB -->
             <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Nosotros</li>
+                    <li class="breadcrumb-item active" aria-current="page">Contactos</li>
                 </ol>
             </nav>
 
-            <span>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, aut dicta. Ratione similique nesciunt quia molestias, eaque necessitatibus eum, ea delectus expedita, itaque esse perspiciatis alias? Fugit asperiores earum sint. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere, dolore. Voluptates, nesciunt fuga ipsam eaque quia eius vel maiores esse sint. Quae nihil cupiditate laudantium at illo maxime non laboriosam.
-            </span>
+            <!-- FORMULARIO -->
+            <h1>Dejame tu comentario</h1>
+            <form action="">
+                <!-- nombre -->
+                <div class="form-row">
+                    <div class="form-group col-sm-6">
+                        <label for="nombre">Nombre</label>
+                        <input type="text" class="form-control" id="nombre" placeholder="Ingrese su nombre">
+                    </div>
+                    <!-- apellido -->
+                    <div class="form-group col-sm-6">
+                        <label for="apellido">Apellido</label>
+                        <input type="text" class="form-control" id="apellido" placeholder="Ingrese su apellido">
+                    </div>
+                </div>
+                <!-- email -->
+                <div class="form-group">
+                    <label for="email">Email</label>
+                        <input type="email" class="form-control" id="email" placeholder="Ingrese su correo">
+                </div>
+                <!-- domicilio -->
+                <div class="form-row">
+                    <div class="form-group col-sm-9">
+                        <label for="domicilio">Domicilio</label>
+                        <input type="domicilio" class="form-control" id="domicilio" placeholder="Ingrese su domicilio">
+                    </div>
+                    <!-- provincia -->
+                    <div class="form-group col-sm-3">
+                        <label for="provincia">Provincia</label>
+                        <select id="provincia" class="form-control">
+                            <option selected>Capital Federal</option>
+                            <option value="">Buenos Aires</option>
+                            <option value="">Cordoba</option>
+                            <option value="">Santa Fe</option>
+                            <option value="">Mendoza</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="comentario">Comentario</label>
+                    <textarea id="comentario" class="form-control" rows="10"></textarea>
+                </div>
+                <!-- checkbox -->
+                <div class="form-group">
+                    <div class="form-check">
+                        <input type="checkbox" class="form-check-input" id="gridCheck">
+                        <label class="form-check-label" for="gridCheck">Quiero que me contacten</label>
+                    </div>
+                </div>
+                <!-- btn -->
+                <button type="submit" class="btn btn-primary">Enviar</button>
+            </form>
+
         </div>
             <hr>
 
